[package]
name = "alphavantage"
version = "0.1.0"
authors = ["Stefan Lukas <afc11hn@hotmail.de>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = { version = "1.0.47", features = ["preserve_order"] }

[build-dependencies]
select = "0.4.3"
regex = "1.3.4"
itertools = "0.8.2"
