[package]
name = "alphavantage"
version = "0.1.0"
authors = ["Stefan Lukas <afc11hn@hotmail.de>"]
edition = "2018"

[features]
default = ["ureq-lib"]
harp-lib = ["harp"]
reqwest-lib = ["reqwest"]
ureq-lib = ["ureq"]

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"], optional = true }
harp = { version = "0.1", optional = true }
ureq = { version = "1", default-features = false, features = ["native-tls"], optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }

[build-dependencies]
select = "0.5"
regex = "1.3"
itertools = "0.9"
