[package]
name = "alphavantage"
version = "0.1.0"
authors = ["Stefan Lukas <afc11hn@hotmail.de>"]
edition = "2018"
license = "MIT"

[features]
default = ["ureq-lib"]
harp-lib = ["harp"]
reqwest-lib = ["reqwest"]
ureq-lib = ["ureq"]

[dependencies]
harp = { version = "0.1", optional = true }
reqwest = { version = "0.10", features = ["json", "blocking"], optional = true }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
ureq = { version = "1", features = ["json"], optional = true }
thiserror = "1.0"

[build-dependencies]
select = "0.5"
regex = "1.3"
itertools = "0.9"
proc-macro2 = { version = "1.0", default-features = false }
quote = "1.0"
